--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "classnames": "^2.3.1",
-    "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-alice-carousel": "^2.5.1",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "sass": "^1.43.2",
+    "sass-loader": "^12.2.0",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.0.1"
   },
